# minicom

./: AUTHORS  COPYING  ChangeLog  FILE_ID.DIZ  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.in  minicom.spec  minicom.spec.in
autom4te.cache/: output.0  requests  traces.0
doc/: Announce-1.78  Announce-1.82  Announce-1.82.1  Announce-1.83  ChangeLog.old  HistSearch  Locales  Macros  Makefile  Makefile.am  Makefile.in  QuickStart.modemu  README.lrzsz  TODO.lrzsz  Todo  Todo.175  Todo.Irix.dif  Todo.emacskey.dif  Todo.fsel  copyright.modemu  fselector.txt  japanese  minicom.FAQ  minirc.dfl  pl-translation.txt  portugues-brasil  suomeksi
extras/: Makefile  Makefile.am  Makefile.in  htsalogin  scriptdemo  unixlogin
extras/linux/: INSTALL  Makefile  Makefile.am  Makefile.in  README-FIRST  mtelnet
extras/tables/: Makefile  Makefile.am  Makefile.in  mc.iso  mc.pc8  mc.sf7
extras/termcap/: Makefile  Makefile.am  Makefile.in  README  termcap.long  termcap.short
extras/terminfo/: Makefile  Makefile.am  Makefile.in  README  minicom
lib/: Makefile  Makefile.am  Makefile.in  error.c  error.h  libport.h  snprintf.c  usleep.c
man/: Makefile  Makefile.am  Makefile.in  ascii-xfr.1  minicom.1  runscript.1  xminicom.1
po/: ChangeLog  Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  es.gmo  es.po  fi.gmo  fi.po  fr.gmo  fr.po  hu.gmo  hu.po  id.gmo  id.po  ja.gmo  ja.po  minicom.pot  nb.gmo  nb.po  pl.gmo  pl.po  pt_BR.gmo  pt_BR.po  ro.gmo  ro.po  ru.gmo  ru.po  rw.gmo  rw.po  sv.gmo  sv.po  vi.gmo  (+3 more)
src/: Makefile  Makefile.am  Makefile.in  ascii-xfr  ascii-xfr.c  common.c  config.c  configsym.h  defmap.h  dial.c  file.c  functions.c  getsdir.c  getsdir.h  help.c  intl.h  ipc.c  keyboard.h  keyserv.c  main.c  minicom  minicom.c  minicom.h  port.h  runscript  rwconf.c  script.c  sysdep.h  sysdep1.c  sysdep1_s.c  sysdep2.c  updown.c  util.c  vt100.c  vt100.h  wildmat.c  windiv.c  window.c  window.h  wkeys.c  (+1 more)
src/.deps/: ascii-xfr.Po  common.Po  config.Po  dial.Po  file.Po  getsdir.Po  help.Po  ipc.Po  main.Po  minicom.Po  rwconf.Po  script.Po  sysdep1.Po  sysdep1_s.Po  sysdep2.Po  updown.Po  util.Po  vt100.Po  wildmat.Po  windiv.Po  window.Po  wkeys.Po
