EXTRA_DIST = Announce-1.78 Announce-1.82 Announce-1.82.1 \
	     Announce-1.83 \
	     COMPATABILITY.lrzsz HistSearch Locales \
	     Macros QuickStart.modemu README.lrzsz \
	     TODO.lrzsz Todo Todo.175 Todo.Irix.dif Todo.emacskey.dif \
	     Todo.fsel copyright.modemu fselector.txt \
	     japanese minicom.FAQ minirc.dfl \
	     modemu.README pl-translation.txt portugues-brasil \
	     suomeksi ChangeLog.old
